# springmass

./: .gitignore  README.md
2d-eigen/: CMakeLists.txt  objspring.cpp
3d-eigen/: CMakeLists.txt  mass.csv  objspring3dvec.cpp  pos.csv  springk.csv
3d-rudimentary/: CMakeLists.txt  objspring3d.cpp
